k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-app
        image: suryanshranjan/startup_growth_investment_prediction_webapp:v3
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
