k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
spec:
  type: NodePort
  selector:
    app: django-app
  # ports:
  # - port: 80
  #   targetPort: 8000  # Change if your app runs on a different port
  ports:
    - port: 80          # Service port
      targetPort: 8000   # Container port
      nodePort: 30080    # NodePort to expose (range 30000-32767)
